@@ -71,7 +71,8 @@ REQUIREMENTS
       OpenLDAP 2.x (tested with 2.1.17 and later)
 
   Apache 2.0 must be built with --enable-ssl and --enable-so.  WebAuth
-  uses apxs to build its Apache modules.
+  uses apxs to build its Apache modules.  Heimdal 0.6 may work, but has
+  not been well-tested.  Heimdal 0.7 has been used more extensively.
 
   The WebAuth Perl bindings have been tested with Perl 5.6.1 and Perl
   5.8.x.
